# RL_Radical_Optimization

./: README.md  pyproject.toml  requirements.txt
codes/: env.py  modelss.py  train.py  utils.py
data/: CDFT DATA -Updated Final.xlsx
notebook/: RL_cdft_chemical_motifs.py  RL_radical_optimization.ipynb  RL_td3_optimization.ipynb
scripts/: motif_enrichment.py  train_td3.py
src/rlcdft/: __init__.py  envs.py  models.py  motifs.py  plotting.py  preprocess.py  replay.py  td3.py
