[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlcdft"
version = "0.1.0"
description = "Research utilities for RL on conceptual DFT descriptors"
requires-python = ">=3.9"
dependencies = ["numpy", "pandas", "torch", "matplotlib", "openpyxl"]

[tool.setuptools.packages.find]
where = ["src"]
